Fixing button alignment inside alerts and margins

--- a/frontend/src/components/elements/CodeBlock/CodeBlock.scss
+++ b/frontend/src/components/elements/CodeBlock/CodeBlock.scss
@@ -21,6 +21,10 @@
   See https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript
 */
 
+div.code-block {
+  margin: 0 0 1rem 0;
+}
+
 .token.comment,
 .token.prolog,
 .token.doctype,
